# bio_lib

./: .cursorignore  .gitignore  1ACB_ba_results.json  1ACB_binding_results.json  1ACB_sasa_atom_results.csv  1ACB_sasa_data.csv  3bzd_ba_results.json  3bzd_sasa_atom_results.csv  LICENSE  MANIFEST.in  README.md  all_metrics_dfs.csv  custom_prodigy.py  plots.ipynb  pyproject.toml  run_prodigy_custom.py  shrake_rupley_jax.py  test.ipynb  update_pkg.sh  utils.py
benchmark/: merged_dataset.json
benchmark_af/: combined_results.json  final_dataset.csv  results_jax_prodigy.csv  sasa_af_vs_freesasa.csv
benchmark_af/20250126_140901_gpu/: 1AK4_results.json  1AKJ_results.json  1B6C_results.json  1BJ1_results.json  1BUH_results.json  1E6E_results.json  1EER_results.json  1EZU_results.json  1FC2_results.json  1GLA_results.json  1HE8_results.json  1J2J_results.json  1K5D_results.json  1KKL_results.json  1KXQ_results.json  1M10_results.json  1MLC_results.json  1PVH_results.json  1QA9_results.json  1S1Q_results.json  1VFB_results.json  1WEJ_results.json  1XU1_results.json  2AJF_results.json  2AQ3_results.json  2HRK_results.json  2I25_results.json  2PCB_results.json  2VIS_results.json  2WPT_results.json  3CPH_results.json  combined_results.json
benchmark_af/20250127_160612_cpu/: 1A2K_results.json  1AKJ_results.json  1AVZ_results.json  1BUH_results.json  1BVK_results.json  1BVN_results.json  1DE4_results.json  1DQJ_results.json  1E4K_results.json  1EER_results.json  1EMV_results.json  1FFW_results.json  1FSK_results.json  1GLA_results.json  1GXD_results.json  1K5D_results.json  1KAC_results.json  1KKL_results.json  1KXQ_results.json  1LFD_results.json  1MLC_results.json  1MQ8_results.json  1R0R_results.json  1S1Q_results.json  1WEJ_results.json  1XQS_results.json  1XU1_results.json  2A9K_results.json  2AJF_results.json  2AQ3_results.json  2GOX_results.json  2HQS_results.json  2I25_results.json  2PCC_results.json  2TGP_results.json  2VIR_results.json  3BZD_results.json
common/: residue_classification.py  residue_library.py  test.py
output_comp/: benchmark_processed.csv  correlations.csv
src/: __init__.py
tests/: common_test.py
(+463 files in other folders)
