[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "bio_lib"
dynamic = ["version"]
description = "A library for biological computations with JAX support"
requires-python = ">=3.7"
authors = [{ name = "mcale6" }]
dependencies = ["biopython", "numpy", "jax", "jaxlib"]
readme = "README.md"
license = { file = "LICENSE" }

[project.scripts]
run-prodigy-jax = "bio_lib.run_prodigy_jax:main"

[tool.hatch.build.targets.wheel]
packages = ["bio_lib"]
sources = ["src"]

[tool.hatch.build]
packages = ["src/bio_lib"]

[tool.hatch.version]
path = "src/bio_lib/version.py"