[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "bio_lib"
dynamic = ["version"]
description = "A library for biological computations with JAX support"
requires-python = ">=3.7"
authors = [{ name = "mcale6" }]
dependencies = [
    "numpy>=1.22.4,<2.0.0",
    "jax",
    "jaxlib",
    "biopython",
    "prodigy-prot",
    "dm-tree"
]
readme = "README.md"
license = { file = "LICENSE" }

[project.optional-dependencies]
apple = ["jax-metal"]

[project.scripts]
run-prodigy-custom = "run_prodigy_custom:main"

[tool.hatch.build.targets.wheel]
packages = ["bio_lib"]
sources = ["src"]

[tool.hatch.build]
packages = ["src/bio_lib"]

[tool.hatch.version]
path = "src/bio_lib/version.py"